--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?28950629');
-  src: url('../font/fontello.eot?28950629#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?28950629') format('woff2'),
-       url('../font/fontello.woff?28950629') format('woff'),
-       url('../font/fontello.ttf?28950629') format('truetype'),
-       url('../font/fontello.svg?28950629#fontello') format('svg');
+  src: url('../font/fontello.eot?38000033');
+  src: url('../font/fontello.eot?38000033#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?38000033') format('woff2'),
+       url('../font/fontello.woff?38000033') format('woff'),
+       url('../font/fontello.ttf?38000033') format('truetype'),
+       url('../font/fontello.svg?38000033#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?28950629#fontello') format('svg');
+    src: url('../font/fontello.svg?38000033#fontello') format('svg');
   }
 }
 */
@@ -59,3 +59,4 @@
 .icon-logout:before { content: '\e801'; } /* '' */
 .icon-pencil:before { content: '\e802'; } /* '' */
 .icon-cancel-circled:before { content: '\e803'; } /* '' */
+.icon-error-alt:before { content: '\e804'; } /* '' */
