--- a/css/style.css
+++ b/css/style.css
@@ -347,3 +347,16 @@ li {
     width: 100px;
 
 }
+
+.noScript {
+    background-color: rgba(198, 0, 10, 0.6);
+    color: #fff;
+    font-size: 1.2em;
+    font-family: 'Comic Sans MS', 'Roboto', Arial, Tahoma, sans-serif;
+    height: 40px;
+    width: 100%;
+    padding-top: 10px;
+    padding-left: 5px;
+    position: fixed;
+    bottom: 0;
+}
